<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.miha.btcontroller.communicator.BtCommunicationActivity">

    <TextView
        android:text="@string/state_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state_tv"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:enabled="false"
        android:id="@+id/send_button"
        android:onClick="send"
        android:layout_below="@+id/state_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_input"
        android:layout_below="@+id/send_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_button"
        android:enabled="false"
        android:id="@+id/receive_button"
        android:onClick="receive"
        android:layout_below="@+id/bt_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:text=""
        android:id="@+id/receive_tv"
        android:layout_below="@+id/receive_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:enabled="false"
        android:onClick="clear"
        android:id="@+id/clear_button"
        android:layout_below="@+id/receive_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
